--- a/geoepi/_quarto.yml
+++ b/geoepi/_quarto.yml
@@ -41,9 +41,7 @@ website:
       - icon: github
         menu:
           - text: Source Code
-            url:  https://github.com/JMHumphreys/jmhumphreys.github.io
-          - text: Report a Bug
-            url:  https://github.com/JMHumphreys/jmhumphreys.github.io/issues
+            url:  https://github.com/geoepi
   page-footer:
     border: false
     left: "Published with [Quarto](https://quarto.org/) v1.2.335"
