--- a/_quarto.yml
+++ b/_quarto.yml
@@ -27,16 +27,10 @@ website:
         menu:
           - icon: github
             href: https://github.com/geoepi
-            text: "Lab GitHub Site"
+            text: "Group GitHub Site"
           - icon: octagon
             href: https://osf.io/zwbhm/
             text: "Open Science Framework"
-          - icon: google
-            href: https://scholar.google.com/citations?hl=en&user=rLUtjhgAAAAJ
-            text: "Scholar"
-          - icon: lightbulb
-            href: https://orcid.org/0000-0002-8464-0886
-            text: "ORCID"
           - icon: envelope
             href: mailto:john.humphreys@usda.gov
             text: "john.humphreys@usda.gov"
