--- a/_quarto.yml
+++ b/_quarto.yml
@@ -29,7 +29,7 @@ website:
             href: https://github.com/geoepi
             text: "Group GitHub Site"
           - icon: octagon
-            href: https://osf.io/zwbhm/
+            href: https://osf.io/hf8t2/
             text: "Open Science Framework"
           - icon: envelope
             href: mailto:john.humphreys@usda.gov
